2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>

	* src/Makefile.am:
	Added missing file to EXTRA_DIST

2005-07-08  Keith Packard  <keithp@keithp.com>

	* .cvsignore:
	* man/.cvsignore:
	* src/.cvsignore:
	* src/Makefile.am:
	Add .cvsignore files
	Switch _la_CFLAGS for AM_CFLAGS to clean up directory

2005-05-22  Alan Coopersmith  <alan.coopersmith@sun.com>

	* Makefile.am, src/Makefile.am, man/Makefile.am, configure.ac,
	  COPYING, NEWS, README, AUTHORS, xi.pc.in:
	Initial autotooling.
