@@ -19,6 +19,7 @@ PKG_CHECK_MODULES(XI, xproto x11 xextproto xext inputproto)
 AC_SUBST(XI_CFLAGS)
 AC_SUBST(XI_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile
