@@ -1,3 +1,10 @@
+2005-10-11  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* man/Makefile.am: 
+	* configure.ac:
+	Use sed to put version number in man page
+	Add shadow man pages for man pages that document multiple functions.
+	
 2005-10-05  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* src/Makefile.am:
